made a few tweaks on the navbar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="navbar-flex2">
                     <button class="navbar-whiteLink navbar-siteLink" style="border-right:1px solid #000000"
                         onclick="navbarMenuToggle()">
-                        <i class="fas fa-bars me-2"></i> MENU
+                        <i class="fas fa-bars me-1"></i>
                     </button>
                 </div>
                 <div class="navbar-flex3 text-center" id="navbar-siteBrand">
