Changed the skills section format

--- a/index.html
+++ b/index.html
@@ -204,29 +204,66 @@
         </div>
 
         <!-- Skills Section -->
-        <section class="py-5" id="skills">
-
-            <hr class="section-divider"> <!-- Section Divider -->
-
-            <div class="container">
-                <h2 class="fw-bold text-center text-primary mb-4">Skills</h2>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <div class="skill-card">
-                            <h5 class="fw-bold">Web Design</h5>
-                            <p>HTML5, CSS, JavaScript, Bootstrap</p>
-                        </div>
+        <!-- Skills Section -->
+        <section class="py-7" id="skills">
+            <div class="container text-center">
+                <div class="row justify-content-center">
+                    <!-- Left Column: Title and Description -->
+                    <div class="col-md-5">
+                        <h2 class="fw-bold text-dark mb-3">I have high skills in IT Management and Development</h2>
+                        <p class="text-muted">
+                            I specialize in creating secure, efficient, and visually appealing solutions. My expertise
+                            includes front-end development, scripting, cloud security, server administration, and
+                            networking. I am dedicated to providing professional, responsive, and multi-functional
+                            solutions.
+                        </p>
                     </div>
-                    <div class="col-md-4">
-                        <div class="skill-card">
-                            <h5 class="fw-bold">Cloud Security & Scripting</h5>
-                            <p>Bash, PowerShell, Hypervisors & VMs, Cybersecurity</p>
+                    <!-- Right Column: Skills and Progress Bars -->
+                    <div class="col-md-5">
+                        <div class="skill-bar mb-4">
+                            <div class="skill-header">
+                                <span class="skill-title">Front-End Development</span>
+                                <span class="skill-percentage">76%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="76"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="skill-card">
-                            <h5 class="fw-bold">Database Management & Networking</h5>
-                            <p>SQL, MongoDB, Cisco Networking</p>
+                        <div class="skill-bar mb-4">
+                            <div class="skill-header">
+                                <span class="skill-title">Scripting</span>
+                                <span class="skill-percentage">88%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="88"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar mb-4">
+                            <div class="skill-header">
+                                <span class="skill-title">Cloud Security</span>
+                                <span class="skill-percentage">70%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="70"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar mb-4">
+                            <div class="skill-header">
+                                <span class="skill-title">Server Administration</span>
+                                <span class="skill-percentage">75%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="75"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-header">
+                                <span class="skill-title">Networking</span>
+                                <span class="skill-percentage">71%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="71"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1035,6 +1072,7 @@
     <script src="js/navbar.js"></script>
     <script src="js/script.js"></script>
     <script src="js/hero.js"></script>
+    <script src="js/skills.js"></script>
     <script src="js/contact.js"></script>
 </body>
 
