Adjust the mobile responsiveness of the skills section

--- a/index.html
+++ b/index.html
@@ -220,6 +220,17 @@
                     </div>
                     <!-- Right Column: Skills and Progress Bars -->
                     <div class="col-md-5">
+                        <!-- Scripting -->
+                        <div class="skill-bar mb-4">
+                            <div class="skill-header">
+                                <span class="skill-title">Scripting</span>
+                                <span class="skill-percentage">90%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="90"></div>
+                            </div>
+                        </div>
+                        <!-- Front-End Development -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
                                 <span class="skill-title">Front-End Development</span>
@@ -229,24 +240,7 @@
                                 <div class="progress" data-progress="76"></div>
                             </div>
                         </div>
-                        <div class="skill-bar mb-4">
-                            <div class="skill-header">
-                                <span class="skill-title">Scripting</span>
-                                <span class="skill-percentage">88%</span>
-                            </div>
-                            <div class="progress-container">
-                                <div class="progress" data-progress="88"></div>
-                            </div>
-                        </div>
-                        <div class="skill-bar mb-4">
-                            <div class="skill-header">
-                                <span class="skill-title">Cloud Security</span>
-                                <span class="skill-percentage">70%</span>
-                            </div>
-                            <div class="progress-container">
-                                <div class="progress" data-progress="70"></div>
-                            </div>
-                        </div>
+                        <!-- Server Administration -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
                                 <span class="skill-title">Server Administration</span>
@@ -256,6 +250,7 @@
                                 <div class="progress" data-progress="75"></div>
                             </div>
                         </div>
+                        <!-- Networking -->
                         <div class="skill-bar">
                             <div class="skill-header">
                                 <span class="skill-title">Networking</span>
@@ -263,6 +258,16 @@
                             </div>
                             <div class="progress-container">
                                 <div class="progress" data-progress="71"></div>
+                            </div>
+                        </div>
+                        <!-- Cloud Security -->
+                        <div class="skill-bar mb-4">
+                            <div class="skill-header">
+                                <span class="skill-title">Cloud Security</span>
+                                <span class="skill-percentage">70%</span>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress" data-progress="70"></div>
                             </div>
                         </div>
                     </div>
@@ -646,7 +651,6 @@
                         </div>
                     </div>
 
-                    <!-- Award Modal -->
                     <!-- Award Modal -->
                     <div id="education-award2024" class="education-modal">
                         <div class="education-modal-content">
