upgraded the animation of the progress bar in the skills section

--- a/index.html
+++ b/index.html
@@ -204,12 +204,11 @@
         </div>
 
         <!-- Skills Section -->
-        <!-- Skills Section -->
         <section class="py-7" id="skills">
             <div class="container text-center">
                 <div class="row justify-content-center">
                     <!-- Left Column: Title and Description -->
-                    <div class="col-md-5">
+                    <div class="col-md-5 scroll-element">
                         <h2 class="fw-bold text-dark mb-3">I have high skills in IT Management and Development</h2>
                         <p class="text-muted">
                             I specialize in creating secure, efficient, and visually appealing solutions. My expertise
@@ -224,17 +223,17 @@
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
                                 <span class="skill-title">Scripting</span>
-                                <span class="skill-percentage">90%</span>
+                                <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
                                 <div class="progress" data-progress="90"></div>
                             </div>
-                        </div>
+                        </div>                        
                         <!-- Front-End Development -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
                                 <span class="skill-title">Front-End Development</span>
-                                <span class="skill-percentage">76%</span>
+                                <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
                                 <div class="progress" data-progress="76"></div>
@@ -244,7 +243,7 @@
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
                                 <span class="skill-title">Server Administration</span>
-                                <span class="skill-percentage">75%</span>
+                                <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
                                 <div class="progress" data-progress="75"></div>
@@ -254,7 +253,7 @@
                         <div class="skill-bar">
                             <div class="skill-header">
                                 <span class="skill-title">Networking</span>
-                                <span class="skill-percentage">71%</span>
+                                <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
                                 <div class="progress" data-progress="71"></div>
@@ -264,7 +263,7 @@
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
                                 <span class="skill-title">Cloud Security</span>
-                                <span class="skill-percentage">70%</span>
+                                <span class="skill-percentage">0%</span>
                             </div>
                             <div class="progress-container">
                                 <div class="progress" data-progress="70"></div>
