--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <div class="row justify-content-center">
                     <!-- Left Column: Title and Description -->
                     <div class="col-md-5 scroll-element">
-                        <h2 class="fw-bold text-dark mb-3">I have high skills in IT Management and Development</h2>
+                        <h2 class="fw-bold text-dark mb-">I have high skills in IT Management and Development</h2>
                         <p class="text-muted">
                             I specialize in creating secure, efficient, and visually appealing solutions. My expertise
                             includes front-end development, scripting, cloud security, server administration, and
