Added an arrow up feature to assist on navigating the site

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/scrollUp.css">
 </head>
 
 <body>
@@ -228,7 +229,7 @@
                             <div class="progress-container">
                                 <div class="progress" data-progress="90"></div>
                             </div>
-                        </div>                        
+                        </div>
                         <!-- Front-End Development -->
                         <div class="skill-bar mb-4">
                             <div class="skill-header">
@@ -1053,6 +1054,10 @@
         </div>
     </footer>
 
+    <!-- Scroll Up Button -->
+    <!-- Arrow Up Button -->
+    <div id="scrollToTop" onclick="scrollToTop()">&#8679;</div>
+
     <!-- Music Control -->
     <div class="music-control" id="musicControl">
         <img src="img/off-music-1.jpg" alt="Music Icon" class="music-icon">
@@ -1076,6 +1081,7 @@
     <script src="js/hero.js"></script>
     <script src="js/skills.js"></script>
     <script src="js/contact.js"></script>
+    <script src="js/scrollUp.js"></script>
 </body>
 
 </html>
