--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <p>
                     I am a motivated computing student currently pursuing a degree in Computing with
                     Information Technology Management at Technological University Dublin. With a strong foundation in
-                    web design, database management, networking, cloud computing and scripting, I excel at tackling
+                    web design, scripting, networking, server administration and cloud computing, I excel at tackling
                     technical challenges
                     and adapting to the ever-evolving ICT landscape.
                 </p>
