--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         onclick="educationOpenModal('education-hobbiesModal')">
                         Hobbies & Interests
                     </button>
-                
+
                     <!-- View CV Button -->
                     <button class="btn btn-primary" onclick="openCVViewer()">View My CV</button>
 
@@ -169,6 +169,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Modal for CV Viewer -->
         <div id="cvViewerModal" class="cv-modal">
             <div class="cv-modal-content">
@@ -179,6 +180,12 @@
                 </div>
                 <!-- Modal Body -->
                 <div class="cv-modal-body">
+                    <!-- Fallback Download Link for Mobile -->
+                    <div id="cvFallback" style="display: none; text-align: center;">
+                        <p>Your browser doesn't support viewing the CV inline.</p>
+                        <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="btn btn-primary" download>Download My CV</a>
+                    </div>
+                    <!-- PDF Viewer -->
                     <iframe id="cvViewerIframe" src="" style="width: 100%; height: 100%; border: none;"></iframe>
                 </div>
             </div>
