--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
         <div id="cvViewerModal" class="cv-modal">
             <div class="cv-modal-content">
                 <!-- Modal Header -->
-                <div class="cv-modal-header text-primary">
+                <div class="cv-modal-header">
                     View My CV
                     <span class="cv-close" onclick="closeCVViewer()">&times;</span>
                 </div>
                 <!-- Modal Body -->
                 <div class="cv-modal-body">
                     <!-- Fallback Download Link for Mobile -->
-                    <div id="cvFallback" style="display: none; text-align: center;">
+                    <div id="cvFallback">
                         <p>Your browser doesn't support viewing the CV inline.</p>
                         <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="btn btn-primary" download>Download My CV</a>
                     </div>
                     <!-- PDF Viewer -->
-                    <iframe id="cvViewerIframe" src="" style="width: 100%; height: 100%; border: none;"></iframe>
+                    <iframe id="cvViewerIframe"></iframe>
                 </div>
             </div>
         </div>
