Added a dynamic file reader that expands my CV directly to my portfolio website

--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
                 </div>
                 <!-- Modal Body -->
                 <div class="cv-modal-body">
-                    <!-- Fallback Download Link for Mobile -->
-                    <div id="cvFallback">
-                        <p>Your browser doesn't support viewing the CV inline.</p>
-                        <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="btn btn-primary" download>Download My CV</a>
+                    <!-- Fallback Link for Mobile -->
+                    <div id="cvFallback" style="display: none; text-align: center;">
+                        <p>Your bobile browser doesn't support viewing the CV inline.</p>
+                        <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="btn btn-primary" target="_blank">Open in
+                            Browser</a>
                     </div>
                     <!-- PDF Viewer -->
                     <iframe id="cvViewerIframe"></iframe>
