Added a dynamic file reader that expands my CV directly to my portfolio website

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <div class="cv-modal-body">
                     <!-- Fallback Link for Mobile -->
                     <div id="cvFallback" style="display: none; text-align: center;">
-                        <p>Your bobile browser doesn't support viewing the CV inline.</p>
+                        <p>Your mobile browser doesn't support viewing the CV inline.</p>
                         <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="btn btn-primary" target="_blank">Open in
                             Browser</a>
                     </div>
