Added a dynamic file reader that expands my CV directly to my portfolio website

--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                 <div class="cv-modal-body">
                     <!-- Fallback Link for Mobile -->
                     <div id="cvFallback" style="display: none; text-align: center;">
-                        <p>Your mobile browser doesn't support viewing the CV inline.</p>
-                        <a href="CV/Ricardo_Danganan_Jnr_CV.pdf" class="btn btn-primary" target="_blank">Open in
-                            Browser</a>
-                    </div>
+                        <p>Your browser doesn't support viewing the CV inline.</p>
+                        <a href="https://docs.google.com/gview?embedded=true&url=https://raw.githubusercontent.com/ricardodanganan/portfolio-website/main/CV/Ricardo_Danganan_Jnr_CV.pdf" 
+                           class="btn btn-primary" target="_blank">Open in Browser</a>
+                    </div>                    
                     <!-- PDF Viewer -->
                     <iframe id="cvViewerIframe"></iframe>
                 </div>
