Fixed the send message pop up confirmation issue of not working

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
             </div>
         </div>
     </div>
+    <!-- Confirmation Modal -->
+    <div id="confirmationModal" class="confirmation-modal">
+        <div class="confirmation-content">
+            <p id="confirmationMessage" class="confirmation-message"></p>
+        </div>
+    </div>
     <!-- End of Navbar Contact Modal -->
 
     <!-- Hero Section -->
@@ -183,9 +189,9 @@
                     <!-- Fallback Link for Mobile -->
                     <div id="cvFallback" style="display: none; text-align: center;">
                         <p>Your browser doesn't support viewing the CV inline.</p>
-                        <a href="https://docs.google.com/gview?embedded=true&url=https://raw.githubusercontent.com/ricardodanganan/portfolio-website/main/CV/Ricardo_Danganan_Jnr_CV.pdf" 
-                           class="btn btn-primary" target="_blank">Open in Browser</a>
-                    </div>                    
+                        <a href="https://docs.google.com/gview?embedded=true&url=https://raw.githubusercontent.com/ricardodanganan/portfolio-website/main/CV/Ricardo_Danganan_Jnr_CV.pdf"
+                            class="btn btn-primary" target="_blank">Open in Browser</a>
+                    </div>
                     <!-- PDF Viewer -->
                     <iframe id="cvViewerIframe"></iframe>
                 </div>
