Add a refresh feature on the logo in the navbar for my website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="navbar-flex3 text-center" id="navbar-siteBrand">
-                    <a href="#hero" id="navbar-logoLink">
+                    <a href="#hero" id="navbar-logoLink" onclick="location.reload();">
                         <img src="/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbar-logo">
                     </a>
                 </div>
@@ -1134,8 +1134,6 @@
         </div>
     </section>
     <!-- End of Contact Section -->
-
-
 
     <!-- Footer Section -->
     <footer id="footer" class="py-4">
