adjusted the colour of the contact section message form

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="navbar-flex3 text-center" id="navbar-siteBrand">
-                    <a href="#hero" id="navbar-logoLink" onclick="location.reload();">
+                    <a href="#hero" id="navbar-logoLink">
                         <img src="/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbar-logo">
                     </a>
                 </div>
@@ -315,7 +315,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="skills-carousel">
+                <div class="carousel-track">
+                    <img src="img/skill1.png" alt="Skill 1" class="carousel-item">
+                    <img src="img/skill2.png" alt="Skill 2" class="carousel-item">
+                    <img src="img/skill3.png" alt="Skill 3" class="carousel-item">
+                    <img src="img/skill4.png" alt="Skill 4" class="carousel-item">
+                    <img src="img/skill5.png" alt="Skill 5" class="carousel-item">
+                    <!-- Repeat images to make the carousel smooth -->
+                    <img src="img/skill1.png" alt="Skill 1" class="carousel-item">
+                    <img src="img/skill2.png" alt="Skill 2" class="carousel-item">
+                    <img src="img/skill3.png" alt="Skill 3" class="carousel-item">
+                    <img src="img/skill4.png" alt="Skill 4" class="carousel-item">
+                    <img src="img/skill5.png" alt="Skill 5" class="carousel-item">
+                </div>
+            </div>
+
         </section>
+
         <!-- End of Skills Section -->
 
         <!-- Parallax Separator -->
